--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "isomorphic-dompurify": "^2.19.0",
     "next": "15.1.3",
     "react": "^19.0.0",
